test/parsing/ferguson/reserved-unmanaged.chpl
var unmanaged = 0;

proc f(unmanaged) {
}

class unmanaged {
  var unmanaged =0;
}

type unmanaged = real;

proc unmanaged() {
}

proc test() {
  try {
  } catch unmanaged {
  }
}
